<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutTwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicUser"
        android:layout_width="106dp"
        android:layout_height="113dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        tools:srcCompat="@drawable/pig" />

    <Button
        android:id="@+id/optionsUser"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_more_vert_black_24dp"
        android:backgroundTint="@android:color/black"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:shadowColor="#00FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@id/profilePicUser"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameProfileUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="Username"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/postNumCountUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followerNumCountUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="4dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followingNumCountUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="4dp"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/postNumUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/post"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followerNumUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followingNumUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <Button
        android:id="@+id/followButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePicUser"
        android:layout_margin="5dp"
        android:backgroundTint="#00FFFFFF"
        android:padding="3dp"
        android:text="@string/follow" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userPostsUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/followButton" />


</RelativeLayout>