<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="106dp"
        android:layout_height="113dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        tools:srcCompat="@drawable/pig" />

    <Button
        android:id="@+id/options"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:drawable/ic_menu_sort_by_size"
        android:backgroundTint="@android:color/black"
        android:shadowColor="#00FFFFFF" />

    <LinearLayout
        android:layout_width="252dp"
        android:layout_height="145dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="7dp"
        android:layout_marginEnd="16dp"
        android:layout_toRightOf="@id/profilePic"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="Username"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/postNumCount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followerNumCount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="4dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followingNumCount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="4dp"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/postNum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/post"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followerNum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followingNum"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </TableRow>

        </TableLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profilePic" />


</RelativeLayout>